# based

./: .gitignore  README.md  package-lock.json  package.json  wiiurpxtool
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
