[package]
name = "based"
version = "0.2.0"
description = "BOTW Assembly Editor - patch the BOTW executable"
authors = ["Caleb Smith <email@calebdixonsmith.top>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/NiceneNerd/based"
readme = "README.md"
default-run = "based"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
anyhow = "1.0.44"
binread = "2.2.0"
dirs = "4.0.0"
ini = "1.3.0"
keystone = { git = "https://github.com/keystone-engine/keystone", tag = "0.9.2" }
meval = "0.2"
regex = "1.5.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
